[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/club.png" type="Texture" id=1]
[ext_resource path="res://Sprites/club_hit.png" type="Texture" id=2]
[ext_resource path="res://Club.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 66.0

[node name="Club" type="Area2D"]
script = ExtResource( 3 )

[node name="SpriteStowed" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpriteHit" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, -33 )
rotation = 0.785398
shape = SubResource( 1 )
disabled = true

[connection signal="area_entered" from="." to="." method="_on_Club_area_entered"]
